_sass/_points.scss
.points-row {
    text-align: center;
}

#LoadingHeader {
    display: flex;
    justify-content: center;
}

#Container {
    display: none;
    overflow-x: scroll;
}

.points-table {
    font-size: 14px;
}

#ErrorMessage {
    display: none;
}

